effect of double script

--- a/youtube13.html
+++ b/youtube13.html
@@ -3454,7 +3454,7 @@ Default text goes here
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+//replace
 <script>
     // Ultimate Presentation Controller
 class UltimatePresentation {
