--- a/youtube14.html
+++ b/youtube14.html
@@ -3947,7 +3947,7 @@ She asked, &amp;quot;Ready&amp;nbsp;&amp;gt; now?&amp;quot;</code></pre>
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+//replace
 <script>
     // Ultimate Presentation Controller
 class UltimatePresentation {
