--- a/youtube16.html
+++ b/youtube16.html
@@ -3460,7 +3460,7 @@ body {
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+//replace
 <script>
     // Ultimate Presentation Controller
 class UltimatePresentation {
