--- a/youtube18.html
+++ b/youtube18.html
@@ -4217,7 +4217,7 @@ SCREEN READER COMPATIBILITY:
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+//replace
  <script>
     // Ultimate Presentation Controller
 class UltimatePresentation {
