--- a/youtube8.html
+++ b/youtube8.html
@@ -3436,7 +3436,7 @@ body {
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+//replace
  <script>
     // Ultimate Presentation Controller
 class UltimatePresentation {
