--- a/youtube11.html
+++ b/youtube11.html
@@ -3200,7 +3200,7 @@ body {
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+//replace
 <script>
     // Ultimate Presentation Controller
 class UltimatePresentation {
