--- a/youtube15.html
+++ b/youtube15.html
@@ -3917,7 +3917,7 @@ She asked, &amp;quot;Ready&amp;nbsp;&amp;gt; now?&amp;quot;</code></pre>
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+//replace
 <script>
     // Ultimate Presentation Controller
 class UltimatePresentation {
