--- a/youtube9.html
+++ b/youtube9.html
@@ -3533,7 +3533,7 @@ body {
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+//replace
  <script>
     // Ultimate Presentation Controller
 class UltimatePresentation {
